--- a/projects/platformer/platformer.css
+++ b/projects/platformer/platformer.css
@@ -3,10 +3,9 @@ body {
 }
 
 canvas {
-  background-color: lightblue;
   margin: 20px;
+  background-color:burlywood
+  
 }
 
-img {
-  display: none;
-}
+
